--- a/firebase.json
+++ b/firebase.json
@@ -2,13 +2,8 @@
   "database": {
     "rules": "database.rules.json"
   },
-  "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
-  },
   "hosting": {
-    "public": "public",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
