--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
     "dependencies": {
         "@auth0/auth0-spa-js": "^1.11.0",
         "@date-io/date-fns": "^1.3.13",
+        "@fortawesome/fontawesome-svg-core": "^1.2.35",
+        "@fortawesome/free-brands-svg-icons": "^5.15.3",
+        "@fortawesome/free-regular-svg-icons": "^5.15.3",
+        "@fortawesome/free-solid-svg-icons": "^5.15.3",
+        "@fortawesome/react-fontawesome": "^0.1.14",
         "@material-ui/core": "^4.11.0",
         "@material-ui/data-grid": "^4.0.0-alpha.6",
         "@material-ui/icons": "^4.9.1",
@@ -56,7 +61,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "deploy": "npm run build && firebase deploy"
     },
     "eslintConfig": {
         "extends": "react-app"
