--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
         "@material-ui/lab": "^4.0.0-alpha.56",
         "@material-ui/pickers": "^3.2.10",
         "@material-ui/styles": "^4.10.0",
+        "@rematch/core": "^1.3.0",
+        "@rematch/loading": "^1.2.1",
+        "@rematch/persist": "^1.1.6",
+        "@rematch/updated": "^0.1.5",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
@@ -27,10 +31,13 @@
         "firebase": "^8.0.0",
         "formik": "^2.1.7",
         "framer-motion": "^2.6.1",
+        "i18next": "^20.4.0",
+        "i18next-browser-languagedetector": "^6.1.2",
+        "i18next-http-backend": "^1.3.0",
         "immer": "^7.0.9",
         "jsonwebtoken": "^8.5.1",
         "jss-rtl": "^0.3.0",
-        "jwt-decode": "^3.0.0",
+        "jwt-decode": "^3.1.2",
         "material-ui-dropzone": "^3.5.0",
         "material-ui-popup-state": "^1.7.2",
         "mui-datatables": "^3.4.1",
@@ -39,6 +46,7 @@
         "react-copy-to-clipboard": "^5.0.2",
         "react-dom": "^16.13.1",
         "react-draggable": "^4.4.3",
+        "react-i18next": "^11.11.4",
         "react-images-uploading": "^3.1.2",
         "react-intl": "^5.13.4",
         "react-perfect-scrollbar": "^1.5.8",
@@ -55,6 +63,8 @@
         "react-waypoint": "^9.0.3",
         "react-window": "^1.8.5",
         "redux": "^4.0.5",
+        "redux-persist": "^6.0.0",
+        "redux-persist-transform-expire": "0.0.2",
         "yup": "^0.29.3"
     },
     "scripts": {
