--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
         ]
     },
     "devDependencies": {
-        "node-sass": "^4.14.1",
+        "sass": "^4.14.1",
         "sass-vars-to-js-loader": "^2.1.1"
     }
 }
