--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@material-ui/lab": "^4.0.0-alpha.56",
         "@material-ui/pickers": "^3.2.10",
         "@material-ui/styles": "^4.10.0",
+        "@mui/icons-material": "^5.6.0",
+        "@mui/material": "^5.6.0",
         "@rematch/core": "^1.3.0",
         "@rematch/loading": "^1.2.1",
         "@rematch/persist": "^1.1.6",
@@ -31,6 +33,7 @@
         "firebase": "^8.0.0",
         "formik": "^2.1.7",
         "framer-motion": "^2.6.1",
+        "html-react-parser": "^1.4.10",
         "i18next": "^20.4.0",
         "i18next-browser-languagedetector": "^6.1.2",
         "i18next-http-backend": "^1.3.0",
@@ -46,6 +49,7 @@
         "react-copy-to-clipboard": "^5.0.2",
         "react-dom": "^16.13.1",
         "react-draggable": "^4.4.3",
+        "react-html5-camera-photo": "1.5.4",
         "react-i18next": "^11.11.4",
         "react-images-uploading": "^3.1.2",
         "react-intl": "^5.13.4",
@@ -65,6 +69,7 @@
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
         "redux-persist-transform-expire": "0.0.2",
+        "video-snapshot": "^1.0.11",
         "yup": "^0.29.3"
     },
     "scripts": {
@@ -90,7 +95,8 @@
         ]
     },
     "devDependencies": {
-        "sass": "^4.14.1",
+        "react-html5-camera-photo": "1.5.4",
+        "sass": "^1.49.11",
         "sass-vars-to-js-loader": "^2.1.1"
     }
 }
